--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <ul class="top-left">
               <li>
                 <i class="fa-sharp fa-regular fa-location-dot"></i>
-                13 Division st, New York, 16004
+                Ciudad de México
               </li>
               <li>
                 <i class="fa-solid fa-envelope"></i>
