--- a/service-details.html
+++ b/service-details.html
@@ -142,7 +142,7 @@
             <ul class="top-left">
               <li>
                 <i class="fa-sharp fa-regular fa-location-dot"></i>
-                13 Division st, New York, 16004
+                Ciudad de México
               </li>
               <li>
                 <i class="fa-solid fa-envelope"></i>
@@ -262,13 +262,15 @@
       <div class="container">
         <div class="row">
           <div class="page-heading">
-            <h2 class="wow fadeInUp" data-wow-delay=".3s">Service Details</h2>
+            <h2 class="wow fadeInUp" data-wow-delay=".3s">
+              Detalles del Servicio
+            </h2>
             <ul class="breadcrumb-list wow fadeInUp" data-wow-delay=".5s">
               <li>
-                <a href="index.html">Home</a>
+                <a href="index.html">Inicio</a>
               </li>
               <li><i class="fa-solid fa-chevrons-right"></i></li>
-              <li>Service Details</li>
+              <li>Detalles del Servicio</li>
             </ul>
           </div>
         </div>
@@ -285,36 +287,36 @@
                 <div class="single-sideber-widget">
                   <ul>
                     <li>
-                      <a href="service-details.html">Patent Infringement</a
-                      ><span><i class="fa-solid fa-chevron-right"></i></span>
+                      <a href="service-details.html">Infracción de Patentes</a>
+                      <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Domestic Violence</a
-                      ><span><i class="fa-solid fa-chevron-right"></i></span>
+                      <a href="service-details.html">Violencia Doméstica</a>
+                      <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Health Care Law</a
-                      ><span><i class="fa-solid fa-chevron-right"></i></span>
+                      <a href="service-details.html">Ley de Atención Médica</a>
+                      <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Insurance Law</a
-                      ><span><i class="fa-solid fa-chevron-right"></i></span>
+                      <a href="service-details.html">Ley de Seguros</a>
+                      <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Education Law</a
-                      ><span><i class="fa-solid fa-chevron-right"></i></span>
+                      <a href="service-details.html">Ley de Educación</a>
+                      <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Criminal Law</a
-                      ><span><i class="fa-solid fa-chevron-right"></i></span>
+                      <a href="service-details.html">Ley Penal</a>
+                      <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Construction Law</a
-                      ><span><i class="fa-solid fa-chevron-right"></i></span>
+                      <a href="service-details.html">Ley de Construcción</a>
+                      <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Family Violence</a
-                      ><span><i class="fa-solid fa-chevron-right"></i></span>
+                      <a href="service-details.html">Violencia Familiar</a>
+                      <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                   </ul>
                 </div>
@@ -327,7 +329,7 @@
                       <i class="fa-regular fa-scale-balanced"></i>
                     </div>
                     <div class="contact-content">
-                      <h4>How Can We Help?</h4>
+                      <h4>¿Cómo Podemos Ayudar?</h4>
                       <p>
                         66 Brooklyn golden street line, NY Synapse@support.com
                       </p>
@@ -348,17 +350,17 @@
                   <img src="assets/img/service/details.jpg" alt="img" />
                 </div>
                 <div class="details-content">
-                  <h3>Service Overview</h3>
+                  <h3>Resumen del Servicio</h3>
                   <p class="mb-2">
-                    In a professional context it often happens that private or
-                    corporate clients corder a publication to be made and
-                    presented with the actual content still not being ready.
-                    Think of a news blog that’s filled with content hourly on
-                    the day of going live. However, reviewers tend to be a
-                    comprehensible content, say, a random text copied from a
-                    newspaper or the internet. There are many vari passages of
-                    Lorem Ipsum available, but the majority have form, by
-                    injected humour
+                    En un contexto profesional, a menudo sucede que clientes
+                    privados o corporativos solicitan que se realice y presente
+                    una publicación con el contenido aún no listo. Piensa en un
+                    blog de noticias que se llena de contenido cada hora el día
+                    de su lanzamiento. Sin embargo, los revisores tienden a ser
+                    distraídos por contenido comprensible, como un texto
+                    aleatorio copiado de un periódico o de internet. Hay muchas
+                    variaciones de pasajes de Lorem Ipsum disponibles, pero la
+                    mayoría tienen forma, con humor inyectado.
                   </p>
                   <p class="mb-5">
                     Morbi accumsan ipsum venec tellus a odio tincidunt auctor
@@ -368,47 +370,47 @@
                     ac urna eu felispibus condimentum sit amet a augue. Sed non
                     neque torquent per conubia nostra elit.
                   </p>
-                  <h3>Evaluate & Improvement</h3>
+                  <h3>Evaluación y Mejora</h3>
                   <p>
                     Morbi accumsan ipsum venec tellus a odio tincidunt auctor
                     Sed non mauris vitae erat consequat auctor eu in elit. Class
                     aptent taciti sociosqu ad litora torquent per conubia
                     nostra, per inceptos himenaeos. Mauris in erat justo. Nullam
                     ac urna eu felispibus condimentum sit amet a augue. Sed non
-                    felispibus condimentum neque elit
+                    felispibus condimentum neque elit.
                   </p>
                   <ul class="details-list">
                     <li>
                       <i class="fa-solid fa-check"></i>
-                      Creating and editing content
+                      Creación y edición de contenido
                     </li>
                     <li>
                       <i class="fa-solid fa-check"></i>
-                      Workflows, reporting, and content organization
+                      Flujos de trabajo, informes y organización de contenido
                     </li>
                     <li>
                       <i class="fa-solid fa-check"></i>
-                      User & role-based administration and security
+                      Administración y seguridad basada en usuarios y roles
                     </li>
                     <li>
                       <i class="fa-solid fa-check"></i>
-                      Flexibility, scalability, and performance and analysis
+                      Flexibilidad, escalabilidad, rendimiento y análisis
                     </li>
                     <li>
                       <i class="fa-solid fa-check"></i>
-                      Multilingual content capabilities
+                      Capacidades de contenido multilingüe
                     </li>
                   </ul>
-                  <h3>The Final Result</h3>
+                  <h3>El Resultado Final</h3>
                   <p>
-                    In a professional context it often happens that private or
-                    corporate clients corder a publication to be made and
-                    presented with the actual content still not being ready.
-                    Think of a news blog that’s filled with content hourly on
-                    the day of going live. However, reviewers tend to be
-                    distracted by comprehensible content, say, a random text
-                    copied from a newspaper or the internet. There are many
-                    variations of passages of Lorem
+                    En un contexto profesional, a menudo sucede que clientes
+                    privados o corporativos solicitan que se realice y presente
+                    una publicación con el contenido aún no listo. Piensa en un
+                    blog de noticias que se llena de contenido cada hora el día
+                    de su lanzamiento. Sin embargo, los revisores tienden a ser
+                    distraídos por contenido comprensible, como un texto
+                    aleatorio copiado de un periódico o de internet. Hay muchas
+                    variaciones de pasajes de Lorem Ipsum disponibles.
                   </p>
                   <div class="contact-form-items">
                     <form
@@ -424,7 +426,7 @@
                               type="text"
                               name="name"
                               id="name"
-                              placeholder="First Name"
+                              placeholder="Nombre"
                             />
                           </div>
                         </div>
@@ -434,7 +436,7 @@
                               type="text"
                               name="email"
                               id="email32"
-                              placeholder="Last Name"
+                              placeholder="Apellido"
                             />
                           </div>
                         </div>
@@ -444,7 +446,7 @@
                               type="text"
                               name="email"
                               id="email33"
-                              placeholder="Email Address"
+                              placeholder="Correo Electrónico"
                             />
                           </div>
                         </div>
@@ -454,7 +456,7 @@
                               type="text"
                               name="subject"
                               id="subject"
-                              placeholder="Phone Number"
+                              placeholder="Número de Teléfono"
                             />
                           </div>
                         </div>
@@ -463,14 +465,14 @@
                             <textarea
                               name="message"
                               id="message"
-                              placeholder="Date of accident and overall description"
+                              placeholder="Fecha del accidente y descripción general"
                             ></textarea>
                           </div>
                         </div>
                         <div class="col-lg-12">
                           <div class="contact-btn text-start">
                             <button type="submit" class="theme-btn">
-                              Request Consultation
+                              Solicitar Consulta
                               <i class="fa-solid fa-arrow-right"></i>
                             </button>
                           </div>
@@ -496,22 +498,22 @@
           <div class="content">
             <div class="section-title">
               <h2 class="text-white wow fadeInUp" data-wow-delay=".2s">
-                Subscribe to Our <br />
-                Newsletter!
+                Suscríbete a Nuestro <br />
+                Boletín Informativo!
               </h2>
             </div>
             <p class="wow fadeInUp" data-wow-delay=".4s">
-              We will only send you important updates and notices.
+              Solo te enviaremos actualizaciones importantes y avisos.
             </p>
           </div>
           <div class="search-widget wow fadeInUp" data-wow-delay=".6s">
             <input
               type="email"
               id="email"
-              placeholder="Enter Your Email address"
+              placeholder="Ingresa Tu Dirección de Correo Electrónico"
             />
             <button type="submit" class="theme-btn">
-              Subscribe
+              Suscribirse
               <i class="fa-solid fa-arrow-right"></i>
             </button>
           </div>
@@ -530,9 +532,9 @@
                 </div>
                 <div class="footer-content">
                   <p>
-                    Our culture nurtures and strives to achieve <br />
-                    innovation, creativity, legal expertise and is <br />
-                    client focused. Daily, we enhance our
+                    Nuestra cultura fomenta y se esfuerza por lograr <br />
+                    innovación, creatividad, experiencia legal y está <br />
+                    enfocada en el cliente. Diariamente, mejoramos
                   </p>
                   <div class="social-icon">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -549,23 +551,23 @@
             >
               <div class="single-footer-widget">
                 <div class="widget-head">
-                  <h4>Expertise</h4>
+                  <h4>Especialidades</h4>
                 </div>
                 <ul class="list-items">
                   <li>
-                    <a href="service-details.html"> Patent Infringement </a>
+                    <a href="service-details.html"> Infracción de Patentes </a>
                   </li>
                   <li>
-                    <a href="service-details.html"> Domestic Violence </a>
+                    <a href="service-details.html"> Violencia Doméstica </a>
                   </li>
                   <li>
-                    <a href="service-details.html"> Travel Accidents </a>
+                    <a href="service-details.html"> Accidentes de Viaje </a>
                   </li>
                   <li>
-                    <a href="service-details.html"> Banking & Finance </a>
+                    <a href="service-details.html"> Banca y Finanzas </a>
                   </li>
                   <li>
-                    <a href="service-details.html"> Personal Injury </a>
+                    <a href="service-details.html"> Lesiones Personales </a>
                   </li>
                 </ul>
               </div>
@@ -576,23 +578,23 @@
             >
               <div class="single-footer-widget">
                 <div class="widget-head">
-                  <h4>Useful Links</h4>
+                  <h4>Enlaces Útiles</h4>
                 </div>
                 <ul class="list-items">
                   <li>
-                    <a href="about.html">About Us</a>
+                    <a href="about.html">Sobre Nosotros</a>
                   </li>
                   <li>
-                    <a href="portfolio.html"> Case Studies </a>
+                    <a href="portfolio.html"> Estudios de Caso </a>
                   </li>
                   <li>
-                    <a href="team.html"> Attorneys </a>
+                    <a href="team.html"> Abogados </a>
                   </li>
                   <li>
                     <a href="news.html"> Blogs </a>
                   </li>
                   <li>
-                    <a href="contact.html"> Contact Us </a>
+                    <a href="contact.html"> Contáctanos </a>
                   </li>
                 </ul>
               </div>
@@ -603,7 +605,7 @@
             >
               <div class="single-footer-widget">
                 <div class="widget-head">
-                  <h4>Connect</h4>
+                  <h4>Conectar</h4>
                 </div>
                 <div class="contact-info">
                   <h6>66 Brooklyn golden street line NY, USA</h6>
@@ -622,17 +624,17 @@
           <div class="container">
             <div class="footer-wrapper">
               <p class="wow fadeInUp" data-wow-delay=".3s">
-                © Synapse Legal Solutions. All Rights Reserved
+                © Synapse Legal Solutions. Todos los Derechos Reservados
               </p>
               <ul class="bottom-list wow fadeInUp" data-wow-delay=".5s">
                 <li>
-                  <a href="contact.html">Privacy Policy</a>
+                  <a href="contact.html">Política de Privacidad</a>
                 </li>
                 <li>
-                  <a href="contact.html">Terms of Service</a>
+                  <a href="contact.html">Términos de Servicio</a>
                 </li>
                 <li>
-                  <a href="contact.html">Legal Agreement</a>
+                  <a href="contact.html">Acuerdo Legal</a>
                 </li>
               </ul>
             </div>
