--- a/service.html
+++ b/service.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Gramentheme" />
     <meta name="description" content="Synapse Legal Solutions" />
     <!-- ======== Page title ============ -->
-    <title>Synapse Legal Solutions</title>
+    <title>Soluciones Legales Synapse</title>
     <!--<< Favcion >>-->
     <link rel="shortcut icon" href="assets/img/favicon.svg" />
     <!--<< Bootstrap min.css >>-->
@@ -142,7 +142,7 @@
             <ul class="top-left">
               <li>
                 <i class="fa-sharp fa-regular fa-location-dot"></i>
-                13 Division st, New York, 16004
+                Ciudad de México
               </li>
               <li>
                 <i class="fa-solid fa-envelope"></i>
@@ -262,13 +262,15 @@
       <div class="container">
         <div class="row">
           <div class="page-heading">
-            <h2 class="wow fadeInUp" data-wow-delay=".3s">Our Services</h2>
+            <h2 class="wow fadeInUp" data-wow-delay=".3s">
+              Nuestros Servicios
+            </h2>
             <ul class="breadcrumb-list wow fadeInUp" data-wow-delay=".5s">
               <li>
-                <a href="index.html">Home</a>
+                <a href="index.html">Inicio</a>
               </li>
               <li><i class="fa-solid fa-chevrons-right"></i></li>
-              <li>Services</li>
+              <li>Servicios</li>
             </ul>
           </div>
         </div>
@@ -282,10 +284,10 @@
     >
       <div class="container">
         <div class="section-title text-center">
-          <span class="sub-title wow fadeInUp"> OUR SERVICES </span>
+          <span class="sub-title wow fadeInUp"> NUESTROS SERVICIOS </span>
           <h2 class="wow fadeInUp" data-wow-delay=".2s">
-            Finding Effective Solutions <br />
-            Outside Courtroom
+            Encontrando Soluciones Efectivas <br />
+            Fuera del Tribunal
           </h2>
         </div>
         <div class="row">
@@ -300,11 +302,15 @@
                 </div>
                 <div class="content">
                   <h4>
-                    <a href="service-details.html"> Health Care Law </a>
+                    <a href="service-details.html"> Creación de Empresas </a>
                   </h4>
                   <p>
-                    We know everyone’s retirement path looks different. Rest
-                    assured, no matter your goals or where you stand.
+                    Te ayudamos a constituir tu empresa en línea desde cualquier
+                    lugar del mundo sin socios mexicanos, así como a obtener un
+                    domicilio fiscal, RFC y e-Firma, apertura de cuentas
+                    bancarias e inscripción en RNIE (Registro Nacional de
+                    Inversión Extranjera). Asimismo, brindamos asesoría con la
+                    elaboración y revisión de contratos civiles y mercantiles.
                   </p>
                 </div>
               </div>
@@ -327,11 +333,15 @@
                 </div>
                 <div class="content">
                   <h4>
-                    <a href="service-details.html"> Insurance Law </a>
+                    <a href="service-details.html">
+                      Corporativo y Empresarial
+                    </a>
                   </h4>
                   <p>
-                    We know everyone’s retirement path looks different. Rest
-                    assured, no matter your goals or where you stand.
+                    Asesoría en fusiones, adquisiciones, transformaciones,
+                    escisiones, disolución y liquidación, emisión de poderes,
+                    resoluciones corporativas, libros corporativos y
+                    cumplimiento normativo.
                   </p>
                 </div>
               </div>
@@ -351,11 +361,15 @@
                 </div>
                 <div class="content">
                   <h4>
-                    <a href="service-details.html"> Family Violence </a>
+                    <a href="service-details.html"> Propiedad Intelectual </a>
                   </h4>
                   <p>
-                    We know everyone’s retirement path looks different. Rest
-                    assured, no matter your goals or where you stand.
+                    Asesoría en protección de activos intangibles como marcas,
+                    patentes y derechos de autor. Asimismo, te ayudamos con los
+                    siguientes trámites: registro de marca, búsqueda de marca en
+                    el Instituto Mexicano de la Propiedad Industrial, renovación
+                    de marca, declaración de uso de marca y registro de obras en
+                    el Instituto Nacional del Derechos de Autor.
                   </p>
                 </div>
               </div>
@@ -375,11 +389,14 @@
                 </div>
                 <div class="content">
                   <h4>
-                    <a href="service-details.html"> Education Law </a>
+                    <a href="service-details.html"> Inmobiliario </a>
                   </h4>
                   <p>
-                    We know everyone’s retirement path looks different. Rest
-                    assured, no matter your goals or where you stand.
+                    Asesoría en operaciones relacionadas con bienes inmuebles:
+                    compraventa, arrendamiento, donación, usufructo, propiedad
+                    en condominio, cesión de derechos, fideicomisos
+                    inmobiliarios, construcción, registros, zonificación,
+                    licencias.
                   </p>
                 </div>
               </div>
@@ -399,11 +416,13 @@
                 </div>
                 <div class="content">
                   <h4>
-                    <a href="service-details.html"> Construction Law </a>
+                    <a href="service-details.html"> Licencias y Permisos </a>
                   </h4>
                   <p>
-                    We know everyone’s retirement path looks different. Rest
-                    assured, no matter your goals or where you stand.
+                    Asesoría y gestión de licencias y permisos esenciales para
+                    operaciones comerciales e industriales, asegurando el
+                    cumplimiento normativo ante autoridades en sectores
+                    regulados y actividades diversas.
                   </p>
                 </div>
               </div>
@@ -423,16 +442,104 @@
                 </div>
                 <div class="content">
                   <h4>
-                    <a href="service-details.html"> Criminal Law </a>
+                    <a href="service-details.html"> Fideicomisos </a>
                   </h4>
                   <p>
-                    We know everyone’s retirement path looks different. Rest
-                    assured, no matter your goals or where you stand.
+                    Asesoría, creación y gestión de fideicomisos, garantizando
+                    estructuras legales sólidas, y mecanismos de protección ante
+                    posibles incumplimientos contractuales.
                   </p>
                 </div>
               </div>
               <div class="service-image">
                 <img src="assets/img/service/06.jpg" alt="img" />
+              </div>
+            </div>
+          </div>
+          <!-- Adding three new services after "Licencias y Permisos" and "Fideicomisos" -->
+          <div class="col-lg-6">
+            <div
+              class="service-main-items img-custom-anim-right wow"
+              data-wow-delay=".3s"
+            >
+              <div class="service-card">
+                <div class="icon">
+                  <i class="flaticon-law"></i>
+                </div>
+                <div class="content">
+                  <h4>
+                    <a href="service-details.html"
+                      >Litigio y Resolución de Controversias</a
+                    >
+                  </h4>
+                  <p>
+                    Asesoría y representación de clientes en procedimientos ante
+                    tribunales, en materia civil, mercantil y administrativa;
+                    incluyendo juicios de amparo, para proteger sus intereses, o
+                    exigir el cumplimiento de derechos, planteando estrategias
+                    agiles y efectivas.
+                  </p>
+                </div>
+              </div>
+              <div class="service-image">
+                <img src="assets/img/service/07.jpg" alt="img" />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div
+              class="service-main-items img-custom-anim-right wow"
+              data-wow-delay=".5s"
+            >
+              <div class="service-card">
+                <div class="icon">
+                  <i class="flaticon-bankruptcy"></i>
+                </div>
+                <div class="content">
+                  <h4>
+                    <a href="service-details.html"
+                      >Concursos Mercantiles, Insolvencia, Quiebras y
+                      Reestructuras</a
+                    >
+                  </h4>
+                  <p>
+                    Asesoría y representación de clientes para reconocimiento y
+                    recuperación de créditos ante entidades sujetas a procesos
+                    concursales, negociación y reestructura de deuda. Además de
+                    otorgar asesoría a empresas en procesos de insolvencia.
+                  </p>
+                </div>
+              </div>
+              <div class="service-image">
+                <img src="assets/img/service/08.jpg" alt="img" />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div
+              class="service-main-items img-custom-anim-right wow"
+              data-wow-delay=".7s"
+            >
+              <div class="service-card">
+                <div class="icon">
+                  <i class="flaticon-labor"></i>
+                </div>
+                <div class="content">
+                  <h4>
+                    <a href="service-details.html">Laboral</a>
+                  </h4>
+                  <p>
+                    Asesoría laboral preventiva para empresas: implementación de
+                    servicios y obras especializadas (REPSE), elaboración de
+                    contratos individuales de trabajo, convenios de
+                    confidencialidad con empleados, elaboración de políticas
+                    internas, comisiones mixtas, reglamentos de trabajo y
+                    estrategias de terminación laboral.
+                  </p>
+                </div>
+              </div>
+              <div class="service-image">
+                <img src="assets/img/service/09.jpg" alt="img" />
               </div>
             </div>
           </div>
@@ -450,22 +557,22 @@
           <div class="content">
             <div class="section-title">
               <h2 class="text-white wow fadeInUp" data-wow-delay=".2s">
-                Subscribe to Our <br />
-                Newsletter!
+                Suscríbete a Nuestro <br />
+                Boletín Informativo!
               </h2>
             </div>
             <p class="wow fadeInUp" data-wow-delay=".4s">
-              We will only send you important updates and notices.
+              Solo te enviaremos actualizaciones importantes y avisos.
             </p>
           </div>
           <div class="search-widget wow fadeInUp" data-wow-delay=".6s">
             <input
               type="email"
               id="email"
-              placeholder="Enter Your Email address"
+              placeholder="Ingresa Tu Dirección de Correo Electrónico"
             />
             <button type="submit" class="theme-btn">
-              Subscribe
+              Suscribirse
               <i class="fa-solid fa-arrow-right"></i>
             </button>
           </div>
@@ -484,9 +591,9 @@
                 </div>
                 <div class="footer-content">
                   <p>
-                    Our culture nurtures and strives to achieve <br />
-                    innovation, creativity, legal expertise and is <br />
-                    client focused. Daily, we enhance our
+                    Nuestra cultura fomenta y se esfuerza por lograr <br />
+                    innovación, creatividad, experiencia legal y está <br />
+                    enfocada en el cliente. Diariamente, mejoramos
                   </p>
                   <div class="social-icon">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -503,23 +610,23 @@
             >
               <div class="single-footer-widget">
                 <div class="widget-head">
-                  <h4>Expertise</h4>
+                  <h4>Especialidades</h4>
                 </div>
                 <ul class="list-items">
                   <li>
-                    <a href="service-details.html"> Patent Infringement </a>
+                    <a href="service-details.html"> Infracción de Patentes </a>
                   </li>
                   <li>
-                    <a href="service-details.html"> Domestic Violence </a>
+                    <a href="service-details.html"> Violencia Doméstica </a>
                   </li>
                   <li>
-                    <a href="service-details.html"> Travel Accidents </a>
+                    <a href="service-details.html"> Accidentes de Viaje </a>
                   </li>
                   <li>
-                    <a href="service-details.html"> Banking & Finance </a>
+                    <a href="service-details.html"> Banca y Finanzas </a>
                   </li>
                   <li>
-                    <a href="service-details.html"> Personal Injury </a>
+                    <a href="service-details.html"> Lesiones Personales </a>
                   </li>
                 </ul>
               </div>
@@ -530,23 +637,23 @@
             >
               <div class="single-footer-widget">
                 <div class="widget-head">
-                  <h4>Useful Links</h4>
+                  <h4>Enlaces Útiles</h4>
                 </div>
                 <ul class="list-items">
                   <li>
-                    <a href="about.html">About Us</a>
+                    <a href="about.html">Sobre Nosotros</a>
                   </li>
                   <li>
-                    <a href="portfolio.html"> Case Studies </a>
+                    <a href="portfolio.html"> Estudios de Caso </a>
                   </li>
                   <li>
-                    <a href="team.html"> Attorneys </a>
+                    <a href="team.html"> Abogados </a>
                   </li>
                   <li>
                     <a href="news.html"> Blogs </a>
                   </li>
                   <li>
-                    <a href="contact.html"> Contact Us </a>
+                    <a href="contact.html"> Contáctanos </a>
                   </li>
                 </ul>
               </div>
@@ -557,7 +664,7 @@
             >
               <div class="single-footer-widget">
                 <div class="widget-head">
-                  <h4>Connect</h4>
+                  <h4>Conectar</h4>
                 </div>
                 <div class="contact-info">
                   <h6>66 Brooklyn golden street line NY, USA</h6>
@@ -576,17 +683,17 @@
           <div class="container">
             <div class="footer-wrapper">
               <p class="wow fadeInUp" data-wow-delay=".3s">
-                © Synapse Legal Solutions. All Rights Reserved
+                © Synapse Legal Solutions. Todos los Derechos Reservados
               </p>
               <ul class="bottom-list wow fadeInUp" data-wow-delay=".5s">
                 <li>
-                  <a href="contact.html">Privacy Policy</a>
+                  <a href="contact.html">Política de Privacidad</a>
                 </li>
                 <li>
-                  <a href="contact.html">Terms of Service</a>
+                  <a href="contact.html">Términos de Servicio</a>
                 </li>
                 <li>
-                  <a href="contact.html">Legal Agreement</a>
+                  <a href="contact.html">Acuerdo Legal</a>
                 </li>
               </ul>
             </div>
