--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -382,9 +382,7 @@
                     </div>
                     <div class="contact-content">
                       <h4>How Can We Help?</h4>
-                      <p>
-                        66 Brooklyn golden street line, NY Synapse@support.com
-                      </p>
+                      <p>Ciudad de México Synapse@support.com</p>
                       <ul class="list">
                         <li>
                           <i class="fa-solid fa-phone"></i>
