--- a/service-details.html
+++ b/service-details.html
@@ -117,7 +117,7 @@
               </ul>
               <div class="header-button mt-4">
                 <a href="contact.html" class="theme-btn">
-                  Request A Quote
+                  Solicita una cotización
                   <i class="fa-sharp fa-regular fa-arrow-right"></i
                 ></a>
               </div>
@@ -173,7 +173,7 @@
             <i class="fa-solid fa-phone"></i>
           </div>
           <div class="content">
-            <span>Call Any Time</span>
+            <span>Llama en Cualquier Momento</span>
             <h6>
               <a href="tel:+8698780868">+869 878 08 68</a>
             </h6>
@@ -221,7 +221,7 @@
                   ><i class="fa-regular fa-magnifying-glass"></i
                 ></a>
                 <a href="contact.html" class="theme-btn style-2">
-                  Request A Quote
+                  Solicitar una Cotización
                   <i class="fa-sharp fa-regular fa-arrow-right"></i
                 ></a>
                 <div class="header__hamburger d-xl-none my-auto">
@@ -330,9 +330,7 @@
                     </div>
                     <div class="contact-content">
                       <h4>¿Cómo Podemos Ayudar?</h4>
-                      <p>
-                        66 Brooklyn golden street line, NY Synapse@support.com
-                      </p>
+                      <p>Ciudad de México Synapse@support.com</p>
                       <ul class="list">
                         <li>
                           <i class="fa-solid fa-phone"></i>
