--- a/index.html
+++ b/index.html
@@ -1422,7 +1422,7 @@
                   <h4>Conectar</h4>
                 </div>
                 <div class="contact-info">
-                  <h6>66 Brooklyn golden street line NY, USA</h6>
+                  <h6>Ciudad de México</h6>
                   <h6>
                     <a href="tel:+18884237576">+1 888 423 7576</a>
                     <a href="mailto:Synapse@support.com">
