--- a/index-three-page.html
+++ b/index-three-page.html
@@ -117,7 +117,7 @@
               </ul>
               <div class="header-button mt-4">
                 <a href="contact.html" class="theme-btn">
-                  Request A Quote
+                  Solicita una Cotización
                   <i class="fa-sharp fa-regular fa-arrow-right"></i
                 ></a>
               </div>
@@ -188,7 +188,7 @@
                 ><i class="fa-regular fa-magnifying-glass"></i
               ></a>
               <a href="contact.html" class="theme-btn">
-                Request A Quote
+                Solicita una Cotización
                 <i class="fa-sharp fa-regular fa-arrow-right"></i
               ></a>
               <div class="header__hamburger d-xl-none my-auto">
