--- a/index-two-page.html
+++ b/index-two-page.html
@@ -117,7 +117,7 @@
               </ul>
               <div class="header-button mt-4">
                 <a href="contact.html" class="theme-btn">
-                  Request A Quote
+                  Solicita una Cotización
                   <i class="fa-sharp fa-regular fa-arrow-right"></i
                 ></a>
               </div>
@@ -1680,7 +1680,7 @@
                   <h4>Connect</h4>
                 </div>
                 <div class="contact-info">
-                  <h6>66 Brooklyn golden street line NY, USA</h6>
+                  <h6>Ciudad de México</h6>
                   <h6>
                     <a href="tel:+18884237576">+1 888 423 7576</a>
                     <a href="mailto:Synapse@support.com">
