--- a/service-details.html
+++ b/service-details.html
@@ -287,35 +287,46 @@
                 <div class="single-sideber-widget">
                   <ul>
                     <li>
-                      <a href="service-details.html">Infracción de Patentes</a>
+                      <a href="service-details.html">Creación de Empresas</a>
                       <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Violencia Doméstica</a>
+                      <a href="service-details.html"
+                        >Corporativo y Empresarial</a
+                      >
                       <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Ley de Atención Médica</a>
+                      <a href="service-details.html">Propiedad Intelectual</a>
                       <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Ley de Seguros</a>
+                      <a href="service-details.html">Inmobiliario</a>
                       <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Ley de Educación</a>
+                      <a href="service-details.html">Licencias y Permisos</a>
                       <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Ley Penal</a>
+                      <a href="service-details.html">Fideicomisos</a>
                       <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Ley de Construcción</a>
+                      <a href="service-details.html"
+                        >Litigio y Resolución de Controversias</a
+                      >
                       <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                     <li>
-                      <a href="service-details.html">Violencia Familiar</a>
+                      <a href="service-details.html"
+                        >Concursos Mercantiles, Insolvencia, Quiebras y
+                        Reestructuras</a
+                      >
+                      <span><i class="fa-solid fa-chevron-right"></i></span>
+                    </li>
+                    <li>
+                      <a href="service-details.html">Laboral</a>
                       <span><i class="fa-solid fa-chevron-right"></i></span>
                     </li>
                   </ul>
@@ -606,7 +617,7 @@
                   <h4>Conectar</h4>
                 </div>
                 <div class="contact-info">
-                  <h6>66 Brooklyn golden street line NY, USA</h6>
+                  <h6>Ciudad de México</h6>
                   <h6>
                     <a href="tel:+18884237576">+1 888 423 7576</a>
                     <a href="mailto:Synapse@support.com">
