--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
             <ul class="top-left">
               <li>
                 <i class="fa-sharp fa-regular fa-location-dot"></i>
+                Montes Urales 424, Lomas de Chapultepec V Secc., Miguel Hidalgo,
                 Ciudad de México
               </li>
               <li>
@@ -1322,12 +1323,15 @@
             >
               <div class="single-footer-widget">
                 <div class="widget-head">
-                  <h4>Conectar</h4>
+                  <h4>Ubicación</h4>
                 </div>
                 <div class="contact-info">
-                  <h6>Ciudad de México</h6>
                   <h6>
-                    <a href="tel:+18884237576">+1 888 423 7576</a>
+                    Montes Urales 424, Lomas de Chapultepec V Secc., Miguel
+                    Hidalgo, Ciudad de México
+                  </h6>
+                  <h6>
+                    <a href="tel:+18884237576">+52 5561078862</a>
                     <a href="mailto:Synapse@support.com">
                       Synapse@support.com
                     </a>
