--- a/testimonial.html
+++ b/testimonial.html
@@ -142,6 +142,7 @@
             <ul class="top-left">
               <li>
                 <i class="fa-sharp fa-regular fa-location-dot"></i>
+                Montes Urales 424, Lomas de Chapultepec V Secc., Miguel Hidalgo,
                 Ciudad de México
               </li>
               <li>
@@ -970,9 +971,12 @@
                   <h4>Connect</h4>
                 </div>
                 <div class="contact-info">
-                  <h6>Ciudad de México</h6>
                   <h6>
-                    <a href="tel:+18884237576">+1 888 423 7576</a>
+                    Montes Urales 424, Lomas de Chapultepec V Secc., Miguel
+                    Hidalgo, Ciudad de México
+                  </h6>
+                  <h6>
+                    <a href="tel:+18884237576">+52 5561078862</a>
                     <a href="mailto:Synapse@support.com">
                       Synapse@support.com
                     </a>
