--- a/index-two-page.html
+++ b/index-two-page.html
@@ -1680,9 +1680,12 @@
                   <h4>Connect</h4>
                 </div>
                 <div class="contact-info">
-                  <h6>Ciudad de México</h6>
                   <h6>
-                    <a href="tel:+18884237576">+1 888 423 7576</a>
+                    Montes Urales 424, Lomas de Chapultepec V Secc., Miguel
+                    Hidalgo, Ciudad de México
+                  </h6>
+                  <h6>
+                    <a href="tel:+18884237576">+52 5561078862</a>
                     <a href="mailto:Synapse@support.com">
                       Synapse@support.com
                     </a>
