banner centered and ready

--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
           <div class="content">
             <span>Call Any Time</span>
             <h6>
-              <a href="tel:+8698780868">+869 878 08 68</a>
+              <a href="tel:+525561078862">+52 5561078862</a>
             </h6>
           </div>
         </div>
