--- a/index-two-page.html
+++ b/index-two-page.html
@@ -184,7 +184,7 @@
                 <div class="content">
                   <span>Call Any Time</span>
                   <h6>
-                    <a href="tel:+8698780868">+869 878 08 68</a>
+                    <a href="tel:+525561078862">+52 5561078862</a>
                   </h6>
                 </div>
               </div>
@@ -1572,8 +1572,8 @@
             <div class="content">
               <h5>Phone</h5>
               <h6>
-                <a href="tel:+8698780868">+869 878 08 68</a> <br />
-                <a href="tel:+8698780868">+869 878 08 68</a>
+                <a href="tel:+525561078862">+52 5561078862</a> <br />
+                <a href="tel:+525561078862">+52 5561078862</a>
               </h6>
             </div>
           </div>
