--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <div class="content">
             <span>Llama en cualquier momento</span>
             <h6>
-              <a href="tel:+8698780868">+869 878 08 68</a>
+              <a href="tel:+525561078862">+52 5561078862</a>
             </h6>
           </div>
         </div>
@@ -267,18 +267,29 @@
     >
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6">
+          <div class="col-lg-0">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".3s">
-                Resultados comprobados <br />
-                Socios en <br />
-                Éxito legal
+                Soluciones sencillas para problemas complejos.<br />
               </h1>
-              <p class="wow fadeInUp" data-wow-delay=".5s">
-                Combinamos conocimiento, experiencia y un compromiso
-                inquebrantable para proporcionar asesoría jurídica que impulsa y
-                protege los intereses de nuestros clientes.
-              </p>
+              <h2
+                class="wow fadeInUp"
+                data-wow-delay=".9s"
+                style="color: white"
+              >
+                Creemos que la simplicidad es poder.<br />
+              </h2>
+              <br />
+              <h3
+                class="wow fadeInUp"
+                data-wow-delay="1.5s"
+                style="color: white"
+              >
+                Asesoría legal, clara, estratégica y accesible<br />
+              </h3>
+              <!-- <p class="wow fadeInUp" data-wow-delay="1s">
+                Asesoría legal, clara, estratégica y accesible
+              </p> -->
             </div>
           </div>
         </div>
