--- a/index.html
+++ b/index.html
@@ -297,57 +297,22 @@
     </section>
     <!-- About-Section Start -->
     <section class="about-section section-padding fix">
-      <div class="container">
-        <div class="about-wrapper">
-          <div class="row g-4 align-items-center">
-            <div class="col-lg-6">
-              <div class="about-image">
-                <img
-                  src="assets/img/about/01.jpg"
-                  alt="img"
-                  class="wow img-custom-anim-top"
-                  data-wow-duration="1.3s"
-                  data-wow-delay="0.3s"
-                />
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="about-content">
-                <div class="section-title">
-                  <span class="sub-title wow fadeInUp"> QUIÉNES SOMOS </span>
-                  <h2 class="wow fadeInUp" data-wow-delay=".3s">
-                    Abogados experimentados, <br />
-                    Listos para ayudar.
-                  </h2>
-                </div>
-                <p class="wow fadeInUp" data-wow-delay=".5s">
-                  Abarca una amplia gama de principios y directrices
-                  establecidos por un gobierno u otra autoridad. El propósito
-                  principal de la ley es la equidad y la igualdad en las
-                  necesidades.
-                </p>
-                <div class="counter-items wow fadeInUp" data-wow-delay=".3s">
-                  <div class="content">
-                    <h5>Clientes satisfechos</h5>
-                    <h2><span class="count">250</span>+</h2>
-                  </div>
-                  <div class="content">
-                    <h5>Categorías de servicio</h5>
-                    <h2><span class="count">153</span>+</h2>
-                  </div>
-                </div>
-                <div class="about-button wow fadeInUp" data-wow-delay=".5s">
-                  <a href="about.html" class="theme-btn">
-                    Leer más
-                    <i class="fa-solid fa-arrow-right"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
+      <div class="container text-center">
+        <div class="section-title">
+          <span class="sub-title">QUIÉNES SOMOS</span>
+          <h2>
+            Un despacho de abogados que ayuda a prevenir problemas legales,
+            cerrar negocios con seguridad y resolver conflictos cuando se
+            presenten.
+          </h2>
+          <p>
+            Nuestro objetivo es que entiendas tus opciones y tengas el respaldo
+            que necesitas, de forma clara y cercana.
+          </p>
         </div>
       </div>
     </section>
+    <!-- About-Section End -->
 
     <!-- Service-Section Start -->
     <section
